2014-12-05  Yaakov Selkowitz  <yselkowi@redhat.com>

	* libc/include/stdlib.h (__bsd_qsort_r): Declare.
	(qsort_r): Declare.
	* libc/search/Makefile.am (ELIX_2_SOURCES): Rename from ELIX_SOURCES.
	(ELIX_4_SOURCES): Define.  Add bsd_qsort_r.c and qsort_r.c.
	(libsearch_la_SOURCES): Adapt accordingly.
	(lib_a_SOURCES): Adapt accordingly.
	(CHEWOUT_FILES): Add qsort_r.def.
	* libc/search/Makefile.in: Regenerate.
	* libc/search/bsd_qsort_r.c: New file.
	* libc/search/qsort.c: Update from FreeBSD HEAD. Adapt for both BSD
	and GNU qsort_r flavors.
	* libc/search/qsort_r.c: New file.

2014-12-04  Ulrich Weigand  <uweigand@de.ibm.com>
	    Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/signal.h [__SPU__] (kill): Declare.

2014-12-03  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/include/inttypes.h: Only enable the 8-bit scanning macros
	if _WANT_IO_C99_FORMATS is defined by configuration.  Add comment
	on why.

2014-11-28  Matthew Fortune  <matthew.fortune@imgtec.com>

	* libc/include/machine/setjmp.h [__mips__]: Remove __mips_fpr == 64
	from the 64-bit _JBTYPE definition.
	* libc/machine/mips/setjmp.S: Re-work the o32 FP64 support to match
	the now one-and-only supported o32 FP64 ABI extension.  Also
	support o32 FPXX.

2014-11-26  Hale Wang  <hale.wang@arm.com>

	* libc/machine/arm/strcmp-armv6m.S: New file.
	* libc/machine/arm/strcmp.S: Add new wrapper.
	* libc/machine/arm/Makefile.am: Add dependencies.
	* libc/machine/arm/Makefile.in: Regenerated.

2014-11-25  Corinna Vinschen  <vinschen@redhat.com>

	* libc/include/sys/_default_fcntl.h: Move all Cygwin-specific open
	flags from Cygwin's fcntl.h here.  Remove check for WIN32.  Remove
	Windows-specific macros.

2014-11-23  Joel Sherrill <joel.sherrill@oarcorp.com>

	* libc/include/sys/resource.h: Add prototype for getrusage()
	to <sys/resource.h>

2014-11-21  Nick Clifton  <nickc@redhat.com>

	PR target/63901
	* configure.host (msp430): Add -mhwmult=none to newlib_cflags.
